Sutter Health/src/objects/Identify_Member__c.object
<CustomObject>
    <fields>
        <fullName>Acknowledge_Coaching__c</fullName>
        <label>Acknowledge Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acknowledge_MHO__c</fullName>
        <label>Acknowledge MHO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Since_Date__c</fullName>
        <label>Active Since Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buildout_Epic_Shell_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buildout Epic Shell Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Back_time_PST__c</fullName>
        <label>Call Back time (PST)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_PCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change PCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coaching_Date__c</fullName>
        <label>Coaching Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coaching_Outcome__c</fullName>
        <label>Coaching Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Acknowledge_Coaching__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHP Nav Transfer</fullName>
                </value>
                <value>
                    <fullName>Scheduled appointments at time of call</fullName>
                </value>
                <value>
                    <fullName>Interested /Scheduled call back</fullName>
                </value>
                <value>
                    <fullName>Interested/Requested and sent information</fullName>
                </value>
                <value>
                    <fullName>Interested/Member will call back to schedule</fullName>
                </value>
                <value>
                    <fullName>Not interested/no call back</fullName>
                </value>
                <value>
                    <fullName>Participating an another program</fullName>
                </value>
                <value>
                    <fullName>No time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collect_Vital_Triage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Vital Triage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirm_PCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm PCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_County__c</fullName>
        <formula>Contact__r.County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Identify Member</relationshipLabel>
        <relationshipName>Sutter_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Complete&apos;), null,IF(Follow_Up_Count__c &lt; 3 ,CASE( Follow_Up_Count__c, 0 , 15, 1, 6, 2) - (Today() - if(ISBLANK(Last_Follow_Up_Date__c), Process_Started__c, Last_Follow_Up_Date__c)), IF(OR(ISBLANK(Last_Follow_Up_Date__c), Last_Follow_Up_Date__c &lt; Effective_Date__c),90 - (Today() - Effective_Date__c ), 30 - (Today() - if(ISBLANK(Last_Follow_Up_Date__c), Process_Started__c, Last_Follow_Up_Date__c)))))</formula>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Contact__r.Member_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>Contact__r.Member_EmployerSub_Name__c</formula>
        <label>Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epic_Record__c</fullName>
        <label>Epic Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Pre-Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Call_Date__c</fullName>
        <label>First Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Call__c</fullName>
        <label>First Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Call_Date__c</fullName>
        <label>Follow-Up Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Count__c</fullName>
        <label>Follow Up Count</label>
        <summaryFilterItems>
            <field>SHP_Follow_Up__c.Call_Outcome__c</field>
            <operation>notEqual</operation>
            <value>Follow-Up Requested</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SHP_Follow_Up__c.Activity__c</field>
            <operation>notEqual</operation>
            <value>Duplicate</value>
        </summaryFilterItems>
        <summaryForeignKey>SHP_Follow_Up__c.Identify_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Foundation__c</fullName>
        <formula>Contact__r.Member_Group_Affiliation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Foundation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fourth_Call_Date__c</fullName>
        <label>Fourth Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fourth_Call__c</fullName>
        <label>Fourth Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Mamber_Phone_Number__c</fullName>
        <formula>NOT(AND(ISBLANK(Contact__r.HomePhone), ISBLANK(Contact__r.Member_Work_Phone__c), ISBLANK(Contact__r.MobilePhone)))</formula>
        <label>Has Member Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Priority__c</fullName>
        <label>High Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Number__c</fullName>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ID_Card_Followup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ID Card Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card_Received__c</fullName>
        <label>ID Card Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_Card_Sent__c</fullName>
        <label>ID Card Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interpreter_Needed__c</fullName>
        <label>Interpreter Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Interpreter_Needed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>American Sign Language</fullName>
                </value>
                <value>
                    <fullName>Tibetan</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Persian</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Irish</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Iranian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Khmer</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Lao</fullName>
                </value>
                <value>
                    <fullName>Laotian</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Punjabi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Follow_Up_Comment__c</fullName>
        <label>Last Follow Up Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Follow_Up_Date__c</fullName>
        <label>Last Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MHO_Outcome__c</fullName>
        <label>MHO Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Acknowledge_MHO__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHP Nav Transfer</fullName>
                </value>
                <value>
                    <fullName>Completed enrollment at time of call</fullName>
                </value>
                <value>
                    <fullName>Interested /Scheduled call back</fullName>
                </value>
                <value>
                    <fullName>Interested /Member will call back to enroll</fullName>
                </value>
                <value>
                    <fullName>Technical difficulties/Provided MHO toll free number</fullName>
                </value>
                <value>
                    <fullName>Not interested/no callback</fullName>
                </value>
                <value>
                    <fullName>Does not have technology to complete enrollment</fullName>
                </value>
                <value>
                    <fullName>Previously enrolled prior to call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <externalId>true</externalId>
        <label>Member ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_Name__c</fullName>
        <label>Member Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Portal__c</fullName>
        <description>Member was provided Instructions to Portal</description>
        <inlineHelpText>Member was provided Instructions to Portal</inlineHelpText>
        <label>Member Portal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Subscriber_IM_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Subscriber IM Record</label>
        <referenceTo>Identify_Member__c</referenceTo>
        <relationshipLabel>Non Subscriber IM</relationshipLabel>
        <relationshipName>Non_Subscriber_IM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_Subscriber__c</fullName>
        <formula>Contact__r.Member_Subscriber_Relationship__c</formula>
        <label>Member Subscriber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Contact__r.LastName &amp; &quot;, &quot; &amp; Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_CoachingP__c</fullName>
        <label>Offer Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_Health_Coaching__c</fullName>
        <label>Offered Health Coaching</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Offer_CoachingP__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled appointments at time of call</fullName>
                </value>
                <value>
                    <fullName>Interested /Scheduled call back</fullName>
                </value>
                <value>
                    <fullName>Interested/Requested and sent information</fullName>
                </value>
                <value>
                    <fullName>Interested/Member will call back to schedule</fullName>
                </value>
                <value>
                    <fullName>Not interested/no call back</fullName>
                </value>
                <value>
                    <fullName>Participating an another program</fullName>
                </value>
                <value>
                    <fullName>No time</fullName>
                </value>
                <value>
                    <fullName>Health Coaching transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_MHO__c</fullName>
        <label>Offered MHO</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sign_up_for_MHO__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed enrollment at time of call</fullName>
                </value>
                <value>
                    <fullName>Interested /Scheduled call back</fullName>
                </value>
                <value>
                    <fullName>Interested /Member will call back to enroll</fullName>
                </value>
                <value>
                    <fullName>Technical difficulties/Provided MHO toll free number</fullName>
                </value>
                <value>
                    <fullName>Not interested/no callback</fullName>
                </value>
                <value>
                    <fullName>Does not have technology to complete enrollment</fullName>
                </value>
                <value>
                    <fullName>Previously enrolled prior to call</fullName>
                </value>
                <value>
                    <fullName>MHO transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_PCP_Registration_Appointment__c</fullName>
        <label>Offered PCP Registration/Appointment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scheduled_Appt_w_PCP__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed Reg/Scheduled Appointment at time of call</fullName>
                </value>
                <value>
                    <fullName>Interested /Scheduled call back</fullName>
                </value>
                <value>
                    <fullName>Interested/Appointment Line Provided</fullName>
                </value>
                <value>
                    <fullName>Complete Reg/No appointment scheduled</fullName>
                </value>
                <value>
                    <fullName>Not interested/not ill</fullName>
                </value>
                <value>
                    <fullName>Changing PCP at later time</fullName>
                </value>
                <value>
                    <fullName>Appointment previously scheduled</fullName>
                </value>
                <value>
                    <fullName>Established care prior to call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCP_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PCP Information</label>
        <referenceTo>PCP_Information__c</referenceTo>
        <relationshipName>Sutter_Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_NPI__c</fullName>
        <formula>Contact__r.PCP_Practitioner_NPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCP Practitioner NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_Name__c</fullName>
        <formula>Contact__r.PCP_Practitioner_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCP Practitioner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSR_Queue_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Queue Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSR_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSR Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Appt_Date_PCP__c</fullName>
        <description>[DATE] - [Past Appt Physician]</description>
        <label>Past Appt (Date / PCP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Nurse_Visit__c</fullName>
        <label>Pre Nurse Visit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Preferred Communication Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Phone_Number__c</fullName>
        <label>Preferred Phone Number</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Plan__c</fullName>
        <label>Previous Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF(ISPICKVAL(Status__c,&apos;Complete&apos;),IMAGE(&apos;/resource/Priority_Flag_Icons/Priority_Flag_01.png&apos;, &apos;Complete&apos;),
IF(OR(Follow_Up_Call_Date__c &lt; TODAY(),ISPICKVAL(High_Priority__c, &apos;Yes&apos;), AND(ISBLANK(Follow_Up_Call_Date__c),Days_Remaining__c &lt; 0)),
	IMAGE(&apos;/resource/Priority_Flag_Icons/Priority_Flag_04.png&apos;,&apos;High Priority&apos;),  
IF(OR(Follow_Up_Call_Date__c = TODAY(), AND(ISBLANK(Follow_Up_Call_Date__c),Days_Remaining__c &lt;= 3)), 
	IMAGE(&apos;/resource/Priority_Flag_Icons/Priority_Flag_03.png&apos;, &apos;Medium Priority&apos;),
IF(OR(Follow_Up_Call_Date__c &lt;= TODAY() + 6, AND(ISBLANK(Follow_Up_Call_Date__c),Days_Remaining__c &lt;= 6)), 
	IMAGE(&apos;/resource/Priority_Flag_Icons/Priority_Flag_02.png?&apos; &amp; TEXT(Days_Remaining__c), &apos;Low Priority&apos;),
&apos;&apos;
)
)
)
)</formula>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Started__c</fullName>
        <label>Process Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_PCP__c</fullName>
        <label>Requested PCP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residential_Address__c</fullName>
        <formula>Contact__r.Residential_Address__c</formula>
        <label>Residential Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Appt_w_PCP__c</fullName>
        <label>Scheduled Appt w/ PCP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_PCP_Visit__c</fullName>
        <label>Scheduled PCP Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Second_Call_Date__c</fullName>
        <label>Second Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Second_Call__c</fullName>
        <label>Second Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_up_for_MHO__c</fullName>
        <label>Sign-up for MHO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Scheduling</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Call_Date__c</fullName>
        <label>Third Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Third_Call__c</fullName>
        <label>Third Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Appt_Date_PCP__c</fullName>
        <description>[DATE] - [Upcoming Appt Physician]</description>
        <label>Upcoming Appt (Date / PCP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Demographics__c</fullName>
        <label>Update Demographics</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Followup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Packet Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Received__c</fullName>
        <label>Welcome Packet Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Packet_Sent_Date__c</fullName>
        <label>Welcome Packet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X60_day_queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>60 day queue</label>
        <type>Checkbox</type>
    </fields>
    <label>Identify Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Foundation__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Follow_Up_Count__c</columns>
        <columns>Status__c</columns>
        <columns>Process_Started__c</columns>
        <columns>Last_Follow_Up_Date__c</columns>
        <columns>Follow_Up_Call_Date__c</columns>
        <columns>Call_Back_time_PST__c</columns>
        <columns>Last_Follow_Up_Comment__c</columns>
        <columns>Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Onboarding</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Process_Started__c</columns>
        <columns>Days_Remaining__c</columns>
        <columns>Follow_Up_Count__c</columns>
        <columns>Last_Follow_Up_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>My Completed Onboarding</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Onboarding</fullName>
        <columns>Foundation__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Process_Started__c</columns>
        <columns>Last_Follow_Up_Date__c</columns>
        <columns>Follow_Up_Call_Date__c</columns>
        <columns>Call_Back_time_PST__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <label>My Open Onboarding</label>
    </listViews>
    <listViews>
        <fullName>X1_SHP_MSR_Queue</fullName>
        <columns>Foundation__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Process_Started__c</columns>
        <columns>Last_Follow_Up_Date__c</columns>
        <columns>Follow_Up_Call_Date__c</columns>
        <columns>Call_Back_time_PST__c</columns>
        <columns>Last_Follow_Up_Comment__c</columns>
        <columns>Priority__c</columns>
        <columns>Member_Subscriber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Member_Subscriber_IM_Record__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Has_Mamber_Phone_Number__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1. SHP MSR Queue</label>
        <queue>SHP_MSR_Onboarding</queue>
        <sharedTo>
            <group>SHP_MSR_Onboarding</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X1_SHP_MSR_Queue_nophone</fullName>
        <columns>Foundation__c</columns>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Employer_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Process_Started__c</columns>
        <columns>Last_Follow_Up_Date__c</columns>
        <columns>Follow_Up_Call_Date__c</columns>
        <columns>Call_Back_time_PST__c</columns>
        <columns>Last_Follow_Up_Comment__c</columns>
        <columns>Priority__c</columns>
        <columns>Member_Subscriber__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Member_Subscriber_IM_Record__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Has_Mamber_Phone_Number__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>3. SHP MSR Queue - No Phone</label>
        <queue>SHP_MSR_Onboarding</queue>
        <sharedTo>
            <group>SHP_MSR_Onboarding</group>
        </sharedTo>
    </listViews>
</CustomObject>